--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:8q1w1zqN5WudDARi8es0mf8ZSFXKnJY825wq9fG3WUg=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+
+WEATHER_API_KEY=
+WEATHER_API_URL=https://api.weatherapi.com/v1
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -28,7 +31,7 @@ DB_DATABASE=master
 DB_USERNAME=root
 DB_PASSWORD=root
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -36,13 +39,14 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
 CACHE_STORE=database
 CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
+CACHE_DRIVER=redis
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
